# watch_demo

./: CMakeLists.txt  README.md  partitions.csv
components/Key/: CMakeLists.txt  Key.c
components/Key/include/: Key.h
components/bsp_codec/: CMakeLists.txt  bsp_codec.c
components/bsp_codec/include/: bsp_codec.h
components/camera/: CMakeLists.txt  camera.c
components/camera/include/: camera.h
components/esp-audio-player/: audio_mp3.cpp  audio_mp3.h  audio_player.cpp
components/esp-audio-player/include/: audio_player.h
components/event_loop/: CMakeLists.txt  event_loop.c
components/event_loop/include/: event_loop.h
components/lcd/: CMakeLists.txt  lcd.c
components/lcd/include/: lcd.h
components/music_player/: CMakeLists.txt  music_player.c
components/music_player/include/: music_player.h
components/rtc_time/: CMakeLists.txt  rtc_time.c
components/rtc_time/include/: rtc_time.h
components/sdcard/: CMakeLists.txt  sdcard.c
components/sdcard/include/: sdcard.h
components/ui/: CMakeLists.txt
components/ui/custom/: bmp_compat_decoder.c  custom.c  custom.h  lv_conf_ext.h  wifi_ui_logic.c  wifi_ui_logic.h
components/ui_event/: CMakeLists.txt  ui_event.c
components/ui_event/include/: ui_event.h
components/wifi_connect/: CMakeLists.txt  wifi_connect.c
components/wifi_connect/include/: wifi_connect.h
main/: CMakeLists.txt  idf_component.yml  main.c
scripts/: idf-build.ps1
